tests/ui/parser/keyword-mut-as-identifier.stderr
error: expected identifier, found `=`
  --> $DIR/keyword-mut-as-identifier.rs:2:13
   |
LL |     let mut = "foo";
   |             ^ expected identifier

error: aborting due to 1 previous error

