tests/ui/parser/keyword-mut-as-identifier.rs
fn main() {
    let mut = "foo"; //~ error: expected identifier, found `=`
}
